# da14580_host_app

./: .gitignore  CMakeLists.txt  README.md  app_api_impl.c  app_msg.c  binary.h  clib_port.c  da14580.c  da14580_host_app.c  gtag.list  gtags.list  main_app_console.c  queue.c  ringbuffer.c  transport.c  uart.c
inc/: app.h  app_api.h  app_msg.h  attm.h  ble_msg.h  clib_port.h  compiler.h  da14580_config.h  diss.h  diss_task.h  gap_cfg.h  gapc.h  gapc_task.h  gapm.h  gapm_task.h  gattc_task.h  gattm_task.h  ke_msg.h  ke_task.h  profiles.h  queue.h  ringbuffer.h  rwip_config.h  serial.h  smpm.h  stdtypes.h  transport.h  uart.h
transport/: CMakeLists.txt  serial.c  serial.h  serial_test.c  transport.c  transport.h
